--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: node_js
 services:
   - redis-server
 node_js:
-  - "4.4.2"
+  - "8.11.3"
 before_install:
-  - npm i -g npm@2.15.0
+  - npm i -g npm@latest
