--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
     "repository": "https://github.com/davidmerfield/Blot",
     "description": "A blogging platform",
     "main": "app/index.js",
+    "engines": {
+        "node": ">=8.0"
+    },
     "scripts": {
         "test": "node tests"
     },
@@ -60,7 +63,7 @@
         "request": "^2.72.0",
         "rimraf": "^2.2.8",
         "sanitize-html": "^1.3.0",
-        "sharp": "^0.15.0",
+        "sharp": "^0.20.5",
         "stripe": "^2.9.0",
         "transliteration": "^0.1.1",
         "twemoji": "^1.2.0",
